--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="todo__box">
                 <h1 class="heading-primary">What to do today?</h1>
                 <form class="form" action="post">
-                    <label for="todo-input"></label>
+                    <!-- <label for="todo-input"></label> -->
                     <!-- <input class="todo-input" type="text" name="todo-input"> -->
-                    <textarea class="todo-input" name="todo-input" id="input" cols="40" rows="5"></textarea>
+                    <textarea type="text" class="todo-input" name="todo-input" id="input" cols="40" rows="5"></textarea>
                     <button class="form-button-post" type="submit">Post</button>
                     <button class="form-button-delete" type="submit">Clear list</button>
                 </form>
@@ -24,7 +24,7 @@
             <div class="todo__list">
                 <h2 class="heading-secondary">To do list</h2>
                 <ul class="list--list">
-                    <!-- <li class="list-item">This is an item on the list</li> -->
+                    <!-- <li class="list-item">This is an item on the list<button class="del-btn">X</button></li> -->
                 </ul>
             </div>
         </div>
